Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.


VERSION 2.4.2-Beta 1
  FEATURES:
    * Added KNotify scripting interface. (BR 260750)
    * Make podcast episodes download filename configurable. Patch by
      Sandeep Raghuraman. (BR 155075)
    * Automatic scrolling in lyrics applet (Thanks to Jan Gerrit Marker)
    * Option to scrobble composer as artist to Last.fm (Thanks to Nicholas Wilson)
    * Option to hide the OSD if another window is taking the full screen

  CHANGES:
    * General user interface cleanup (addition of browser widget backgrounds,
      etc.)
    * Removed the add button in the context toolbar. Applet explorer is opened on config.
    * Easier to understand Dynamic playlists
    * Made Amarok depend ffmpeg-0.6 or newer.
    * Use KImageCache if possible (kdelibs 4.5.0 and later), which should
      reduce the number of cache-related crashes.

  BUGFIXES:
    * Fixed playlist tooltip getting too tall for multiline comments. (BR 256038)
    * Made equalizer keywords (dB,kHz,...) translatable. (BR 263572)
    * Made equalizer preset names translatable. (BR 263596)
    * Fixed runtime error reporting of scripts. (BR 207409)
    * Fixed "Happy" moodbar theme. (BR 264432)
    * Fixed crash for invalid scripts trying to be stopped by the manager.
      (BR 268917)
    * Fixed collection menu items ordering. (BR 207007)
    * Fixed top level podcast location setting. (BR 263736)
    * Fixed double-clicking in collection using left-handed mouse setting.
      (BR 272360)


VERSION 2.4.1
  BUGFIXES:
    * Fixed crash on saving playlist on ineligible device. (BR 266899)
    * Fixed Photos applet crash on track metadata change. (BR 265395)
    * Fixed crash on local collection search. (BR 270949)
    * Fixed crash during iPod track removal. (BR 253088)
    * Relative paths support for XSPF playlists. (BR 264147)
    * Fixed incorrect handling of "Various Artists" node by Collection Browser,