@@ -5,6 +5,8 @@ Amarok ChangeLog
 
 VERSION 2.4.2-Beta 1
   FEATURES:
+    * Enable drag and drop on collections to copy/move within Local Music and
+      directly from the playlist. (BR 223400)
     * Added KNotify scripting interface. (BR 260750)
     * Make podcast episodes download filename configurable. Patch by
       Sandeep Raghuraman. (BR 155075)
